--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
     <div id="carouselExample" class="carousel slide carousel-fade" data-bs-ride="carousel">
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="../images/phone1.jpg" class=" w-100 h-75 rounded-2" alt="...">
+                <img src="phone1.jpg" class=" w-100 h-75 rounded-2" alt="...">
                 <div class="carousel-caption ">
                     <h3>Best Deals on The phones</h3>
                     <p>A life without you, would be like a computer without an OS.</p>
