--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="../images/phone2.jpg" class=" w-100 h-75 rounded-2" alt="...">
+                <img src="phone2.jpg" class=" w-100 h-75 rounded-2" alt="...">
                 <div class="carousel-caption ">
                     <h3 class="text-dark">Best Deals on The phones!!!!</h3>
                     <p class="text-dark">A life without you, would be like a computer without an OS.</p>
@@ -124,28 +124,28 @@
 
             </div>
             <div class="carousel-item">
-                <img src="../images/laptop1.jpg" class=" w-100 h-75 rounded-2" alt="...">
+                <img src="laptop1.jpg" class=" w-100 h-75 rounded-2" alt="...">
                 <div class="carousel-caption ">
                     <h3>Best Deals on The laptop!!!</h3>
                     <p>A life without you, would be like a computer without an OS.</p>
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="../images/clothes2.jpg" class=" w-100 h-75 rounded-2" alt="...">
+                <img src="clothes2.jpg" class=" w-100 h-75 rounded-2" alt="...">
                 <div class="carousel-caption ">
                     <h3>Best Deals on The Clothes</h3>
                     <p>A life without you, would be like a computer without an OS.</p>
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="../images/tv1.jpg" class=" w-100 h-75 rounded-2" alt="...">
+                <img src="tv1.jpg" class=" w-100 h-75 rounded-2" alt="...">
                 <div class="carousel-caption ">
                     <h3>Best Deals on The Smart Televisions</h3>
                     <p>A life without you, would be like a computer without an OS.</p>
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="../images/headphonne1.jpg" class=" w-100 h-75 rounded-2" alt="...">
+                <img src="headphonne1.jpg" class=" w-100 h-75 rounded-2" alt="...">
                 <div class="carousel-caption ">
                     <h3>Best Deals on The Smart Headphone</h3>
                     <p>A life without you, would be like a computer without an OS.</p>
@@ -172,7 +172,7 @@
             <div class="col-lg-4 col-md-6 col-sm-12 ">
                 <div class="card mt-3">
 
-                    <img src="../images/phone3.jpg" alt="" class="card-img-top">
+                    <img src="phone3.jpg" alt="" class="card-img-top">
                     <div class="card-body">
 
                         <div class="card-title">Samsung Galaxy M-11 (Ocean Blue,128GB) (6GB RAM)</div>
@@ -203,7 +203,7 @@
             <div class="col-lg-4 col-md-6 col-sm-12 ">
                 <div class="card mt-3">
 
-                    <img src="../images/phone4.jpg" alt="" class="card-img-top">
+                    <img src="phone4.jpg" alt="" class="card-img-top">
                     <div class="card-body">
 
                         <div class="card-title">Samsung Galaxy J-7 NXT (Ocean Blue,32GB) (3GB RAM)</div>
@@ -234,7 +234,7 @@
             <div class="col-lg-4 col-md-6 col-sm-12 ">
                 <div class="card mt-3">
 
-                    <img src="../images/laptop3.jpg" alt="" class="card-img-top">
+                    <img src="laptop3.jpg" alt="" class="card-img-top">
                     <div class="card-body">
 
                         <div class="card-title">Acer Aspire 3 (Ocean Blue,1TB) (8GB RAM)</div>
@@ -269,7 +269,7 @@
             <div class="col-lg-4 col-md-6 col-sm-12 ">
                 <div class="card mt-3">
 
-                    <img src="../images/laptop4.jpg" alt="" class="card-img-top">
+                    <img src="laptop4.jpg" alt="" class="card-img-top">
                     <div class="card-body">
 
                         <div class="card-title">Acer Aspire 5 (Ocean Blue,1.5TB) (16GB RAM)</div>
@@ -302,7 +302,7 @@
             <div class="col-lg-4 col-md-6 col-sm-12 ">
                 <div class="card mt-3">
 
-                    <img src="../images/headphonne1.jpg" alt="" class="card-img-top">
+                    <img src="headphonne1.jpg" alt="" class="card-img-top">
                     <div class="card-body">
 
                         <div class="card-title">Boat Headphones With High Base and Good Sound Quality (Mic-Yes) (Sweat
@@ -337,7 +337,7 @@
             <div class="col-lg-4 col-md-6 col-sm-12 ">
                 <div class="card mt-3">
 
-                    <img src="../images/clothes.jpg" alt="" class="card-img-top">
+                    <img src="clothes.jpg" alt="" class="card-img-top">
                     <div class="card-body">
 
                         <div class="card-title">Trending Fashion Clothes (Branded Clothes) </div>
